--- a/main.css
+++ b/main.css
@@ -8,9 +8,12 @@ html, body {
 
 body {
   font-family: 'Lato', sans-serif;
+  
   background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');
   background-position: center top;
   background-size: cover;
+  
+  background-color: rgb(248,248,250);
   margin: 0;
 }
 
@@ -35,7 +38,7 @@ body {
 
 .gallery-item {
   line-height: 0;
-  border: 5px solid #FFF;
+  border: 5px solid #FFF; 
   margin: 15px;
 }
 
